# DesktopIndicator

./: Cargo.toml  LICENSE  README.md
src/: config.rs  desktop.rs  icon.rs  main.rs  shortcuts.rs  tray.rs  utils.rs
