[package]
name = "DesktopIndicator"
version = "1.0.0"
edition = "2024"

[dependencies]
bus = "2.4.1"
config = { version = "0.15.19", features = ["yaml"] }
trayicon = "0.4.0"
winit = "0.30.12"
winvd = "0.0.48"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
simple_logger = "5.1.0"
dirs-next = "2.0.0"
win-hotkeys = "0.5.1"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }
x-win = "5.5.0"
